[package]
name = "wundernut-vol13"
version = "0.1.0"
authors = ["Mikko Kouhia <mikko.kouhia@iki.fi>"]
edition = "2021"
description = "Solution to Wundernut vol. 13"
readme = "README.md"
license = "MIT"
repository = "https://github.com/mkouhia/wundernut-vol13"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.13.0"
